# finance-tracker

./: .editorconfig  .gitignore  00_项目入口.md  01_项目总览与下一步.md  02_问题与报错日志.md  AGENTS.md  CLAUDE.md  CONTEXT.md  PayPal分析报告.md  README.md  categories.md  config.example.json  failed_transactions_audit.txt  package-lock.json  package.json  parse_bank_pdfs.py  pyproject.toml  记账.html  记账固定支出.html
.github/workflows/: windows-ci.yml
.superpowers/sdd/: csv-only-task-4-report.md
docs/: deutsche-bank-merchant-extraction.md  development-environment.md  import-audit.md  phase-1-parser-parity.md
docs/adr/: 0001-local-web-app-with-sqlite-ledger.md  0002-store-runtime-data-inside-project.md  0003-compute-reports-on-the-server.md  0004-vendor-a-lightweight-chart-library.md  0005-refunds-offset-the-original-expense.md  0006-show-non-spending-cash-flows-separately.md  0007-support-one-off-overrides-and-durable-merchant-rules.md  0008-use-tiered-merchant-matching.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
finance_tracker/: __init__.py  __main__.py  app.py  audit.py  categories.py  config.py  db.py  domain.py  importers.py  merchant_coverage.py  merchant_rules.py  runtime.py  services.py  statement_directory.py
finance_tracker/static/: app.js  (+1 more)
legacy/: README.md  parse_bank_pdfs.py  paypal的工作模式.md  一键生成账单.bat
scripts/: bootstrap.ps1  doctor.ps1  test.ps1
tests/: test_finance_tracker.py  test_kontoumsaetze_browser.mjs  test_merchant_review_browser.mjs  test_ui.mjs
银行流水/: transactions_2026-01-01_2026-07-11-cr.csv  transactions_2026-01-01_2026-07-11.csv
(+32 files in other folders)
