[project]
name = "finance-tracker"
version = "0.1.0"
description = "Offline personal finance import, cleaning, and reporting"
requires-python = ">=3.11"
dependencies = ["PyMuPDF>=1.24"]

[project.scripts]
finance-tracker = "finance_tracker.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

